# libpd

./: .gitignore  CMakeLists.txt  README.md
src/: pd.c  pd.h
test/: test.c
test/files/: apidc_setup.pd  fak.pd  syncmlds.pd
