cmake_minimum_required(VERSION 3.28.2)
file(GLOB_RECURSE SOURCES "src/*.c")
if(PD_BUILD_TESTS)
    project(pd_test C)
    add_executable(pd_test ${SOURCES} test/test.c)
    target_include_directories(pd_test PRIVATE src)
    target_compile_options(pd_test PRIVATE -std=c11 -Wall -Werror )
    target_compile_definitions(pd_test PRIVATE PD_TEST_MODE)
else()
    include(../../sdk/config.cmake)
    project(sieelf_libpd C)
    add_library(libpd SHARED ${SOURCES})
    target_sdk_setup(libpd NSG)
    target_compile_options(libpd BEFORE PUBLIC -std=c11 -Wall -Werror)
    target_link_libraries(libpd crt_helper gcc c ft)
    set_target_properties(libpd PROPERTIES LIBRARY_OUTPUT_NAME pd)
    set_target_properties(libpd PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../sdk/lib/)
endif()
